@@ -1,3 +1,10 @@
+2009-10-15  Miloslav Trmač  <mitr@redhat.com>
+
+	* tmpwatch.c (struct excluded_pattern, excluded_patterns)
+	(excluded_patterns_tail, main): New option --exclude-pattern.
+	(cleanupDirectory): Implement --exclude-pattern.
+	* tmpwatch.8: Document --exclude-pattern.
+
 2009-05-22  Miloslav Trmač  <mitr@redhat.com>
 
 	* Makefile (VERSION): Version 2.9.15.
